update: code optimization and adding SCM schemas

--- a/SupplyChainOptimization.ipynb
+++ b/SupplyChainOptimization.ipynb
@@ -14,7 +14,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from pulp import *"
@@ -22,12 +21,13 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-02T09:39:37.831726Z",
-     "start_time": "2024-05-02T09:39:37.803040Z"
+     "end_time": "2024-05-05T14:21:18.796047Z",
+     "start_time": "2024-05-05T14:17:57.415937Z"
     }
    },
    "id": "82904e301cdc4516",
-   "execution_count": 69
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -42,7 +42,6 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
    "source": [
     "freight = pd.read_excel('repositories/Supply chain logistics problem.xlsx', sheet_name = 'FreightRates')\n",
     "order = pd.read_excel('repositories/Supply chain logistics problem.xlsx', sheet_name = 'OrderList')\n",
@@ -55,38 +54,96 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-02T09:39:40.776287Z",
-     "start_time": "2024-05-02T09:39:37.891802Z"
+     "end_time": "2024-05-05T14:23:10.452351Z",
+     "start_time": "2024-05-05T14:22:25.494407Z"
     }
    },
    "id": "24381c2a18f96585",
-   "execution_count": 70
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
+   "source": "wh_cap.head()",
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-05T14:35:56.583048Z",
+     "start_time": "2024-05-05T14:35:56.499339Z"
+    }
+   },
+   "id": "1a310f723430d0cb",
    "outputs": [
     {
      "data": {
-      "text/plain": "     Carrier orig_port_cd dest_port_cd  minm_wgh_qty  max_wgh_qty svc_cd  \\\n0     V444_6       PORT08       PORT09         250.0       499.99    DTD   \n1     V444_6       PORT08       PORT09          65.0        69.99    DTD   \n2     V444_6       PORT08       PORT09          60.0        64.99    DTD   \n3     V444_6       PORT08       PORT09          50.0        54.99    DTD   \n4     V444_6       PORT08       PORT09          35.0        39.99    DTD   \n...      ...          ...          ...           ...          ...    ...   \n1535  V444_8       PORT03       PORT09           0.0        99.99    DTD   \n1536  V444_8       PORT03       PORT09         500.0      1999.99    DTD   \n1537  V444_8       PORT03       PORT09         250.0       499.99    DTD   \n1538  V444_8       PORT03       PORT09        2000.0     99999.99    DTD   \n1539  V444_8       PORT03       PORT09         100.0       249.99    DTD   \n\n      minimum cost    rate mode_dsc  tpt_day_cnt Carrier type  \n0          43.2272  0.7132   AIR               2  V88888888_0  \n1          43.2272  0.7512   AIR               2  V88888888_0  \n2          43.2272  0.7892   AIR               2  V88888888_0  \n3          43.2272  0.8272   AIR               2  V88888888_0  \n4          43.2272  1.0552   AIR               2  V88888888_0  \n...            ...     ...      ...          ...          ...  \n1535       29.3392  0.4116   AIR               0  V88888888_0  \n1536       29.3392  0.3112   AIR               0  V88888888_0  \n1537       29.3392  0.4116   AIR               0  V88888888_0  \n1538       29.3392  0.3112   AIR               0  V88888888_0  \n1539       29.3392  0.4116   AIR               0  V88888888_0  \n\n[1540 rows x 11 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Carrier</th>\n      <th>orig_port_cd</th>\n      <th>dest_port_cd</th>\n      <th>minm_wgh_qty</th>\n      <th>max_wgh_qty</th>\n      <th>svc_cd</th>\n      <th>minimum cost</th>\n      <th>rate</th>\n      <th>mode_dsc</th>\n      <th>tpt_day_cnt</th>\n      <th>Carrier type</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>V444_6</td>\n      <td>PORT08</td>\n      <td>PORT09</td>\n      <td>250.0</td>\n      <td>499.99</td>\n      <td>DTD</td>\n      <td>43.2272</td>\n      <td>0.7132</td>\n      <td>AIR</td>\n      <td>2</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>V444_6</td>\n      <td>PORT08</td>\n      <td>PORT09</td>\n      <td>65.0</td>\n      <td>69.99</td>\n      <td>DTD</td>\n      <td>43.2272</td>\n      <td>0.7512</td>\n      <td>AIR</td>\n      <td>2</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>V444_6</td>\n      <td>PORT08</td>\n      <td>PORT09</td>\n      <td>60.0</td>\n      <td>64.99</td>\n      <td>DTD</td>\n      <td>43.2272</td>\n      <td>0.7892</td>\n      <td>AIR</td>\n      <td>2</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>V444_6</td>\n      <td>PORT08</td>\n      <td>PORT09</td>\n      <td>50.0</td>\n      <td>54.99</td>\n      <td>DTD</td>\n      <td>43.2272</td>\n      <td>0.8272</td>\n      <td>AIR</td>\n      <td>2</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>V444_6</td>\n      <td>PORT08</td>\n      <td>PORT09</td>\n      <td>35.0</td>\n      <td>39.99</td>\n      <td>DTD</td>\n      <td>43.2272</td>\n      <td>1.0552</td>\n      <td>AIR</td>\n      <td>2</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1535</th>\n      <td>V444_8</td>\n      <td>PORT03</td>\n      <td>PORT09</td>\n      <td>0.0</td>\n      <td>99.99</td>\n      <td>DTD</td>\n      <td>29.3392</td>\n      <td>0.4116</td>\n      <td>AIR</td>\n      <td>0</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>1536</th>\n      <td>V444_8</td>\n      <td>PORT03</td>\n      <td>PORT09</td>\n      <td>500.0</td>\n      <td>1999.99</td>\n      <td>DTD</td>\n      <td>29.3392</td>\n      <td>0.3112</td>\n      <td>AIR</td>\n      <td>0</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>1537</th>\n      <td>V444_8</td>\n      <td>PORT03</td>\n      <td>PORT09</td>\n      <td>250.0</td>\n      <td>499.99</td>\n      <td>DTD</td>\n      <td>29.3392</td>\n      <td>0.4116</td>\n      <td>AIR</td>\n      <td>0</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>1538</th>\n      <td>V444_8</td>\n      <td>PORT03</td>\n      <td>PORT09</td>\n      <td>2000.0</td>\n      <td>99999.99</td>\n      <td>DTD</td>\n      <td>29.3392</td>\n      <td>0.3112</td>\n      <td>AIR</td>\n      <td>0</td>\n      <td>V88888888_0</td>\n    </tr>\n    <tr>\n      <th>1539</th>\n      <td>V444_8</td>\n      <td>PORT03</td>\n      <td>PORT09</td>\n      <td>100.0</td>\n      <td>249.99</td>\n      <td>DTD</td>\n      <td>29.3392</td>\n      <td>0.4116</td>\n      <td>AIR</td>\n      <td>0</td>\n      <td>V88888888_0</td>\n    </tr>\n  </tbody>\n</table>\n<p>1540 rows × 11 columns</p>\n</div>"
+      "text/plain": [
+       "  Plant ID  Daily Capacity \n",
+       "0  PLANT15               11\n",
+       "1  PLANT17                8\n",
+       "2  PLANT18              111\n",
+       "3  PLANT05              385\n",
+       "4  PLANT02              138"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Plant ID</th>\n",
+       "      <th>Daily Capacity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PLANT15</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>PLANT17</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>PLANT18</td>\n",
+       "      <td>111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PLANT05</td>\n",
+       "      <td>385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLANT02</td>\n",
+       "      <td>138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "freight"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-02T09:39:40.808399Z",
-     "start_time": "2024-05-02T09:39:40.778805Z"
-    }
-   },
-   "id": "1a310f723430d0cb",
-   "execution_count": 71
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
