update: new dataset and model

--- a/repositories/SupplyChainOptimization.ipynb
+++ b/repositories/SupplyChainOptimization.ipynb
@@ -64,7 +64,9 @@
   },
   {
    "cell_type": "code",
-   "source": "wh_cap.head()",
+   "source": [
+    "wh_cap.head()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
